src/index.css
@import "tailwindcss";

@font-face {
  font-display: swap;
  font-family: 'Inter Tight';
  font-style: normal;
  font-weight: 400;
  src: url('/fonts/inter-tight-v8-latin-regular.woff2') format('woff2');
}

@font-face {
  font-display: swap;
  font-family: 'Inter Tight';
  font-style: normal;
  font-weight: 500;
  src: url('/fonts/inter-tight-v8-latin-500.woff2') format('woff2');
}

@font-face {
  font-display: swap;
  font-family: 'Inter Tight';
  font-style: normal;
  font-weight: 600;
  src: url('/fonts/inter-tight-v8-latin-600.woff2') format('woff2');
}

@font-face {
  font-display: swap;
  font-family: 'Inter Tight';
  font-style: normal;
  font-weight: 700;
  src: url('/fonts/inter-tight-v8-latin-700.woff2') format('woff2');
}

:root {
  --font-family: "Inter Tight", sans-serif;
  --background-color: #576f35;
  --font-size: 14px;
  --line-height: 1.5;
  --light-text-color: #fbfbfb;
  --dart-text-color: #141414;
  --back-bg-button: rgba(20, 20, 20, 0.2);
  --secondary-bg-section: #7a3145;
  --hover-back-bg-button: #28282870;
  --hover-light-bg: #fbfbfb;
  --hover-text-color: #7a3145;
  --accent-text-color: #d4bfc4;
  --hover-privacy-text-color: #45242d;
  --hover-privacy-bg-color: #fbfbfb86;
  --header-bg: #576f355c;
  --border-color: #d4bfc4;
  --secondary-light-text-color: #858585;
  --mobile-backdrop-bg: rgba(20, 20, 20, 0.4);
  --hover-button-bg: #d4bfc4;
  --disable-button-bg: rgba(63, 63, 63, 0.56);
  --form-base-border: #858585;
  --form-invalid-border: #e74a3b;
  --form-valid-border: #3cbc81;
  --error-text-color: #e74a3b;
  --hover-border-color: #7a3145;
}

* {
  box-sizing: border-box;
  scroll-behavior: smooth;
}

::-webkit-scrollbar {
  scrollbar-width: none;
}

html,
body {
  overscroll-behavior: none;
  -webkit-overflow-scrolling: touch;
}

body {
  font-family: var(--font-family);
  background-color: var(--background-color);
  font-size: var(--font-size);
  line-height: var(--line-height);
}

input,
select,
textarea {
  font-size: 16px;
}

input:focus,
textarea:focus {
  scroll-margin-bottom: 100px;
}

.visually-hidden {
  position: absolute;
  width: 1px;
  height: 1px;
  margin: -1px;
  border: 0;
  padding: 0;
  white-space: nowrap;
  clip-path: inset(100%);
  clip: rect(0 0 0 0);
  overflow: hidden;
}

